alignment correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ a{
     height: 55px;
     display: flex;
     justify-content: flex-start;
+    padding-inline-start: 31px;
 }
 .navlinks{
     display: flex;
